Add link to the Microsoft Virtual Academy

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en" runat="server">
-<head runat="server">
+<html lang="en">
+<head>
     <meta charset="utf-8" />    
-    <title>Dashboard</title>
-    
+    <title>Experimental Website</title>    
 </head>
 <body>
-    <div class="peer ">
-        <p>This is index</p>
-    </div>
-    
+	<h1>A Very New Website</h1>
+	<p>Lorem ipsum</p>
+	</br>
+        <p><a href="funhtml">Let's have fun!</a></p>
+	<p><a href="http://microsoftvirtualacademy.com">Lets learn some stuff!</a></p>    
 </body>
 </html>
